--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -6,8 +6,9 @@
         <body>
             <main class="main-mc">
                 <p>
-                    <img class="img-principal-mc" src=<%=product.image %> alt="Imagen del juego">
-                    <!-- completar cuando elaboremos imagen dinamica en controlador zar7  -->
+                    <img class="img-principal-mc" src=<%="/images/productImages" +product.ImagenPrincipal.ruta %> alt=
+                    <%= product.ImagenPrincipal.ruta %>>
+                        <!-- completar cuando elaboremos imagen dinamica en controlador zar7  -->
                 </p>
                 <section class="main-descripcion-mc">
                     <div class="descripcion-esrb-buy">
@@ -20,12 +21,12 @@
                             </h6>
                             <!--  va a venir por parametro de caracteristicas  -->
                             <p>
-                                <%= product.plataforma %>
+                                <%= product.Plataformas %>
                             </p>
                             <!--  ejemplo de parametrized object  -->
                         </div>
                         <p class="precio-mc">
-                            <%= product.price %>
+                            <%= product.precio %>
                         </p>
                         <div class="esrb-buy">
                             <div class="buy-mc">
@@ -44,72 +45,20 @@
                     <div class="tecnicos">
                         <h4 class="h4-mc">Datos técnicos</h4>
                         <div class="datos-tecnicos">
-                            <p>
-                                <%= product.players %>
-                            </p>
                             <p>Plataforma:
-                                <%= product.plataforma %>
+                                <%= product.Plataformas %>
                             </p>
-                            <p>Lanzamiento:
-                                <%= product.release %>
-                            </p>
-                            <p>Editor:
-                                <%= product.editor %>
-                            </p>
-                            <p>Categoria:
-                                <%= product.categoryOption %>
-                            </p>
-                            <p>Idiomas de pantalla:
-                                <%= product.idioma %>
+                            <p>
+                                <%= product.datosTecnicos %>
                             </p>
                         </div>
                     </div>
                     <div class="requisitos-pc">
                         <h4 class="h4-mc">Requisitos del sistema</h4>
                         <div class="requisitos-min">
-                            <h6>MÍNIMO:</h6>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
-                            <p>SO:
-                                <%= product.so %>
+                            <p>
+                                <%= product.requisitos%>
                             </p>
-                            <p>Procesador:
-                                <%= product.procesador %>
-                            </p>
-                            <p>Memoria:
-                                <%= product.ram %>
-                            </p>
-                            <p>Gráficos:
-                                <%= product.graphic %>
-                            </p>
-                            <p>DirectX:
-                                <%= product.directx %>
-                            </p>
-                            <p>Almacenamiento:
-                                <%= product.storage %>
-                            </p><br>
-                            <h6>RECOMENDADO:</h6>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
-                            <p>SO:
-                                <%= product.so %>
-                            </p>
-                            <p>Procesador:
-                                <%= product.procesador %>
-                            </p>
-                            <p>Memoria:
-                                <%= product.ram %>
-                            </p>
-                            <p>Gráficos:
-                                <%= product.graphic %>
-                            </p>
-                            <p>DirectX:
-                                <%= product.directx %>
-                            </p>
-                            <p>Almacenamiento:
-                                <%= product.storage %>
-                            </p><br>
-                            <p>Requiere un procesador y un sistema operativo de 64 bits</p>
-                        </div>
-                    </div>
                 </section>
                 </section>
                 <div class="resumen-mc">
