--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -7,7 +7,7 @@
             <main class="main-mc">
                 <p>
                     <img class="img-principal-mc" src=<%="/images/productImages" +product.ImagenPrincipal.ruta %> alt=
-                    <%= product.ImagenPrincipal.ruta %>>
+                    <%= product.ImagenPrincipal.ruta %>> 
                         <!-- completar cuando elaboremos imagen dinamica en controlador zar7  -->
                 </p>
                 <section class="main-descripcion-mc">
@@ -33,9 +33,9 @@
                                 <button class="cart-mc">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
                             </div>
                             <div class="esrb">
-                                <img class="esrb-photo" src=<%=product.ratingIMG %> alt="imagen calificacion"><br>
+                                <img class="esrb-photo" src="" alt="imagen calificacion"><br>
                                 <p class="esrb-detail">
-                                    <%=product.esrb%>
+                                    <%=product.Edad.nombre%>
                                 </p>
                             </div>
                         </div>
