--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -33,9 +33,8 @@
                                 <button class="cart-mc">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
                             </div>
                             <div class="esrb">
-                                <img class="esrb-photo" src="" alt="imagen calificacion"><br>
+                                <img class="esrb-photo" src=<%="/images" +product.Edad.ruta%> alt="imagen calificacion"><br>
                                 <p class="esrb-detail">
-                                    <%=product.Edad.nombre%>
                                 </p>
                             </div>
                         </div>
